Fixed the whitespace on small devices

--- a/src/components/Drinks/Drinks.module.scss
+++ b/src/components/Drinks/Drinks.module.scss
@@ -13,7 +13,6 @@
     margin-top: 160px;
 
     @media screen and (max-width: $media-sm) {
-        width     : 450px;
         margin-top: 80px;
     }
 }
